<resources>
    <string name="app_name">MyCalculator</string>
    <string name="tv_result">0</string>
    <string name="btn_clear">clear</string>
    <string name="btn_divide">/</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_multiply">x</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_plus">+</string>
    <string name="btn_zero">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_result">=</string>
    <string name="btn_delete">DEL</string>
</resources>